--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/_main.scss">
     <script src="./scripts/main.js" defer></script>
   </head>
   <body>
@@ -25,148 +25,175 @@
 
       <a class="header__open" href="#backdrop"></a>
 
-      <a class="header__logo" href="#">
-        <img src="images/logo-museum.png" alt="logo muzeum">
+      <a class="header__link" href="#">
+        <img
+          src="images/logo-museum.png"
+          alt="logo muzeum"
+          class="header__logo"
+        >
       </a>
 
-      <section id="backdrop" class="header_backdrop">
-        <section class="header__menu">
-          <a class="header__close" href="#"></a>
-          <div class="header_menu-puncts">
-            <div class="header__items one-column">
-              <a class="header__link" href="#gallery">Галерея</a>
+      <section class="header__block">
+        <h1 class="header__title">ХУДОЖНІЙ  МУЗЕЙ</h1>
+        <div class="header_ticket">
+          <span class="header__inskription">КВИТКИ</span>
+          <a class="header__button" href="#">
+          </a>
+        </div>
+      </section>
 
-              <a class="header__link" href="#actual">Виставки та <br> події</a>
+
+      <section id="backdrop" class="page__backdrop">
+        <section class="page__menu">
+          <a class="page__close" href="#"></a>
+          <div class="page_menu-puncts">
+            <div class="page__items">
+              <a class="page__link" href="#gallery">Галерея</a>
+
+              <a class="page__link" href="#actual">Виставки та події</a>
             </div>
 
-            <div class="header__items two-column ">
-              <a class="header__link" href="#footer">Про Нас</a>
+            <div class="page__items ">
+              <a class="page__link" href="#footer">Про Нас</a>
 
-              <a class="header__link" href="#footer">Контакти</a>
+              <a class="page__link" href="#footer">Контакти</a>
             </div>
           </div>
-          <div class="header__line"></div>
-          <p class="header__graph">Графік роботи</p>
 
-          <p class="header__time-work">
-            <strong>12:00— 20:00</strong> середа <br>
-            <strong>12:00 — 20:00</strong> четвер <br>
-            <strong>12:00 — 20:00</strong> п’ятниця <br>
-            <strong>11:00 — 19:00</strong> субота <br>
-            <strong>11:00 — 19:00</strong> неділя
-          </p>
+          <hr class="page__line">
 
-          <p class="header__holiday">
-            <strong>Вихідні:</strong> понеділок, вівторок
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </p>
+          <div class="page__right">
+            <p class="page__graph">Графік роботи</p>
+            <div class="page__paragraphs">
+              <p class="page__time-work">
+                <strong>12:00— 20:00</strong> середа <br>
+                <strong>12:00 — 20:00</strong> четвер <br>
+                <strong>12:00 — 20:00</strong> п’ятниця <br>
+                <strong>11:00 — 19:00</strong> субота <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+
+              <p class="page__holiday">
+                <strong>Вихідні:</strong> понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
         </section>
       </section>
     </header>
 
     <main>
       <div class="conteiner">
-        <section class="ticket">
-          <h1 class="ticket__title">ХУДОЖНІЙ  МУЗЕЙ</h1>
-          <div class="ticket_ticket">
-            <span class="ticket__inskription">КВИТКИ</span>
-            <a class="ticket__link" href="#">
-            </a>
-          </div>
-        </section>
-        <section id="actual" class="current">
-          <h2 class="current__name">Актуальні події</h2>
-          <div class="current__block">
-            <img
-              class="current__depiction"
-              src="images/current-1.png"
-              alt="current-1"
-            >
-            <div class="current__description">
-              <div class="current__exhibition-block margin">
-                <span class="current__exhibition">ВИСТАВКА</span>
+        <div id="actual" class="events">
+          <h2 class="events__name title">Актуальні події</h2>
+          <section  class="events__conteiner">
+            <div class="events__block">
+              <img
+                class="events__depiction"
+                src="images/current-1.png"
+                alt="current-1"
+              >
+              <div class="events__description">
+                <div class="events__exhibition-block">
+                  <span class="events__exhibition">ВИСТАВКА</span>
 
-                <a class="current__link" href="#">26.08-29.11.2019</a>
+                  <a class="events__link" href="#">26.08-29.11.2019</a>
+                </div>
+
+                <h3 class="events__title tile3">
+                  Йду i повертаюсь
+
+                  <span class="events__square"></span>
+                </h3>
+
+                <p class="events_paragraph">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
-
-              <h3 class="current__title current__title-square margin">Йду i повертаюсь</h3>
-
-              <p class="current_paragraph">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
-            </div>
-          </div>
-
-          <div class="current__block">
-            <img
-              class="current__depiction"
-              src="images/current-2.png"
-              alt="current-1"
-            >
-            <div class="current__description">
-              <div class="current__exhibition-block margin">
-                <span class="current__exhibition">ВИСТАВКА</span>
-
-                <a class="current__link" href="#">26.08-29.11.2019</a>
-              </div>
-
-              <h3 class="current__title current__title-square margin"> I спогади i мрії</h3>
-
-              <p class="current_paragraph">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
             </div>
 
-          </div>
-        </section>
+            <div class="events__block">
+              <img
+                class="events__depiction"
+                src="images/current-2.png"
+                alt="current-2"
+              >
+              <div class="events__description">
+                <div class="events__exhibition-card">
+                  <span class="events__exhibition">ВИСТАВКА</span>
+
+                  <a class="events__link" href="#">26.08-29.11.2019</a>
+                </div>
+
+                <h3 class="events__title tile3">
+                  I спогади i мрії
+
+                  <span class="events__square"></span>
+                </h3>
+
+                <p class="events_paragraph">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+
+            </div>
+          </section>
+        </div>
       </div>
 
-      <div class="current__block">
+      <div class="events__card">
+        <div class="events__description-card">
+          <div class="events__exhibition-block">
+            <span class="events__exhibition">ЛЕКЦІЯ</span>
+
+            <a class="events__link" href="#">26/08/2019 - 11:00</a>
+          </div>
+
+          <h3 class="events__card-title tile3">Від класицизму до романтизму</h3>
+        </div>
+
         <img
-          class="current__depiction"
-          src="images/current-3.png"
-          alt="current-1"
+        class="events__depiction-img"
+        src="images/current-3.png"
+        alt="current-1"
         >
-        <div class="current__description current__description-card">
-          <div class="current__exhibition-block current__exhibition-block-mod">
-            <span class="current__exhibition">ЛЕКЦІЯ</span>
-
-            <a class="current__link" href="#">26/08/2019 - 11:00</a>
-          </div>
-
-          <h3 class="current__title">Від класицизму до романтизму</h3>
-        </div>
       </div>
-      <section id="gallery" class="gallery">
-        <h3 class="gallery__title">Галерея</h3>
-        <div class="gallery__slider">
-          <img
-            src="images/gallery/gallery-1.png"
-            alt="gallery"
-            class="gallery__image"
-          >
-          <img
-            src="images/gallery/gallery-2.png"
-            alt="gallery"
-            class="gallery__image"
-          >
-          <img
-            src="images/gallery/gallery-3.png"
-            alt="gallery"
-            class="gallery__image"
-          >
-          <img
-            src="images/gallery/gallery-4.png"
-            alt="gallery"
-            class="gallery__image"
-          >
-        </div>
-        <div class="gallery__items">
-          <span class="gallery__item"></span>
-          <span class="gallery__item"></span>
-          <span class="gallery__item"></span>
-          <span class="gallery__item"></span>
-        </div>
-      </section>
+
+      <div class="conteiner">
+        <section id="gallery" class="gallery">
+          <h3 class="gallery__title title">Галерея</h3>
+
+          <div class="gallery__slider">
+            <img
+              src="images/gallery/gallery-1.png"
+              alt="gallery"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery-2.png"
+              alt="gallery"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery-3.png"
+              alt="gallery"
+              class="gallery__image"
+            >
+            <img
+              src="images/gallery/gallery-4.png"
+              alt="gallery"
+              class="gallery__image"
+            >
+          </div>
+          <div class="gallery__items">
+            <span class="gallery__item"></span>
+            <span class="gallery__item"></span>
+            <span class="gallery__item"></span>
+            <span class="gallery__item"></span>
+          </div>
+        </section>
+      </div>
+
       <section class="subscription">
-        <h2 class="subscription__title">Підписка</h2>
+        <h2 class="subscription__title title">Підписка</h2>
         <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
         <form
           class="subscription__form"
@@ -183,84 +210,90 @@
           <button class="subscription__button" type="submit"></button>
         </form>
       </section>
+
     </main>
-    <footer id="footer" class="footer">
-      <section class="footer__icons">
-        <a class="footer__logo" href="#">
-          <img src="images/logo-museum.png" alt="logo muzeum">
-        </a>
+    <footer id="footer">
+      <div class="container">
+        <div class="footer">
+          <section class="footer__icons">
+            <a class="footer__logo" href="#">
+              <img src="images/logo-museum.png" alt="logo muzeum">
+            </a>
 
-        <div class="footer__socials">
-          <a
-            target="_blank"
-            href="https://www.facebook.com/namu.museum/"
-            class="footer__social"
-          >
-            <img src="./images/icons/Facebook.png" alt="Facebook">
-          </a>
+            <div class="footer__socials">
+              <a
+                target="_blank"
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__social"
+              >
+                <img src="./images/icons/Facebook.png" alt="Facebook">
+              </a>
 
-          <a
-            target="_blank"
-            href="https://www.instagram.com/namu.museum/"
-            class="footer__social"
-          >
-            <img src="./images/icons/instagram.png" alt="instagram">
-          </a>
+              <a
+                target="_blank"
+                href="https://www.instagram.com/namu.museum/"
+                class="footer__social"
+              >
+                <img src="./images/icons/instagram.png" alt="instagram">
+              </a>
+            </div>
+          </section>
+
+          <section class="footer__data">
+            <section class="footer__graph">
+              <h4 class="footer__title title4">Графік роботи</h4>
+
+              <p class="footer__time-work">
+                <strong>12:00— 20:00</strong> середа <br>
+                <strong>12:00 — 20:00</strong> четвер <br>
+                <strong>12:00 — 20:00</strong> п’ятниця <br>
+                <strong>11:00 — 19:00</strong> субота <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+
+              <p class="footer__holiday">
+                Вихідні понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </section>
+
+            <section class="footer__contacts">
+              <h4 class="footer__title title4">Контакти:</h4>
+
+              <p class="footer__address">
+                вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </p>
+            </section>
+          </section>
+
+          <a href="#header" class="footer__circle"></a>
+
+          <hr class="footer__line">
+
+          <section class="footer__links">
+            <div class="footer__items">
+              <a class="footer__link" href="#gallery">Галерея</a>
+
+              <a class="footer__link" href="#actual">Виставки та події</a>
+            </div>
+
+            <div class="footer__items">
+              <a class="footer__link" href="#footer">Про Нас</a>
+
+              <a class="footer__link" href="#footer">Контакти</a>
+            </div>
+          </section>
         </div>
-      </section>
 
-      <section class="footer__data">
-        <section class="footer__graph">
-          <h4 class="footer__title">Графік роботи</h4>
-
-          <p class="footer__time-work">
-            <strong>12:00— 20:00</strong> середа <br>
-            <strong>12:00 — 20:00</strong> четвер <br>
-            <strong>12:00 — 20:00</strong> п’ятниця <br>
-            <strong>11:00 — 19:00</strong> субота <br>
-            <strong>11:00 — 19:00</strong> неділя
-          </p>
-
-          <p class="footer__holiday">
-            Вихідні понеділок, вівторок
-            Каса припиняє роботу за 1 годину
-            до закриття музею
-          </p>
+        <section class="footer__captcha">
+          <a class="footer__copiright">Copyright © 2019. All Rights Reserved.</a>
+          <a class="footer__designed">Designed by Zhyriada Marina</a>
         </section>
-
-        <section class="footer__contacts">
-          <h4 class="footer__title">Контакти:</h4>
-
-          <p class="footer__address">
-            вул. М. Грушевського, 6; Київ, 01001
-            тел. +38 (044) 278-13-57
-            факс +38 (044) 278-74-54
-            e-mail: info@namu.kiev.ua
-          </p>
-        </section>
-      </section>
-
-      <a href="#header" class="footer__circle"></a>
-
-      <div class="footer__line"></div>
-
-      <section class="footer__links">
-        <div class="footer__items footer__items-one-column">
-          <a class="footer__link" href="#gallery">Галерея</a>
-
-          <a class="footer__link" href="#actual">Виставки та події</a>
-        </div>
-
-        <div class="footer__items footer__items-two-column ">
-          <a class="footer__link" href="#footer">Про Нас</a>
-
-          <a class="footer__link" href="#footer">Контакти</a>
-        </div>
-      </section>
-      <section class="footer__captcha">
-        <p class="footer__copiright">Copyright © 2019. All Rights Reserved.</p>
-        <p class="footer__designed">Designed by Zhyriada Marina</p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
