--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +16,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com"
       crossorigin="true"
     >
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet">
   </head>
+
   <body class="page__body">
     <header class="header">
       <div class="header__icon">
@@ -24,7 +27,7 @@
       </div>
 
       <div class="header__top">
-        <a href="#" class="header__top-logo">
+        <a href="#" class="header__top-logo logo">
           NA
           <br>
           MU
@@ -35,7 +38,7 @@
         <h1 class="aside__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
         <div class="aside__buy-tickets">
-          <a href="#" class="aside__buy-tickets--button">КВИТКИ</a>
+          <a href="#" class="aside__buy-tickets--button button">КВИТКИ</a>
         </div>
 
         <span class="aside__events--rotated">Події</span>
@@ -107,13 +110,13 @@
 
     <main class="main">
       <div class="main__content">
-        <section class="events"  id="events">
-          <h2 class="events__title">Актуальнi події</h2>
+        <section class="events" id="events">
+          <h2 class="section__title">Актуальнi події</h2>
           <article class="article-exhibition">
             <div class="article-exhibition__wrapper">
 
               <img
-                src="./images/river.jpg"
+                src="./images/pictures/river.jpg"
                 alt="River picture.jpg"
                 class="article-exhibition__image"
               >
@@ -135,9 +138,9 @@
             <div class="article-exhibition__wrapper">
 
               <img
-                src="./images/woman-peacock.jpg"
-                alt="River picture.jpg"
-                class="article-exhibition__image"
+              src="./images/pictures/woman-peacock.jpg"
+              alt="River picture.jpg"
+              class="article-exhibition__image"
               >
               <div class="article-exhibition event-description">
                 <div class="article-exhibition event-description--caption">
@@ -153,27 +156,161 @@
             </div>
           </article>
 
-          <!-- <article class="article-lecture">
-            <img
-              class="article-lecture__bg"
-              src="./images//lect-d-bg.jpg"
-              alt="d"
-            >
-            <div class="article-lecture__info float">
-              <div class="article-lecture--caption">
-                <article class="article-lecture--caption event-description--caption-type">Лекція</article>
-                <article class="article-lecture--caption event-description--caption-date">26/08/2019 - 11:00</article>
+          <article class="lecture">
+            <div class="container">
+              <div class="lecture__info">
+                <div class="lecture__info--caption">
+                  <article class="lecture__info--caption-type">Лекція</article>
+                  <article class="lecture__info--caption-date">26/08/2019 - 11:00</article>
+                </div>
+                <h3 class="lecture__info--title">Від класицизму до романтизму</h3>
               </div>
-              <h3 class="article-lecture__title">
-                Від класицизму до романтизму
-              </h3>
             </div>
-          </article> -->
+          </article>
+        </section>
+
+        <section class="gallery" id="gallery">
+          <h2 class="section__title">Галерея</h2>
+          <article class="picture">
+            <div class="wrapper">
+              <div class="picture__item picture--woman"></div>
+              <div class="picture__item picture--geese"></div>
+              <div class="picture__item picture--village"></div>
+              <div class="picture__item picture--park"></div>
+              <div class="picture__item picture--sea"></div>
+            </div>
+          </article>
+        </section>
+
+        <section class="subscribe">
+          <form
+            name="email"
+            method="get"
+            class="purchase"
+          >
+            <h2 class="purchase__title">Підписка</h2>
+            <article class="purchase__caption">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </article>
+
+            <div class="purchase__wrapper">
+              <input
+                type="email"
+                class="purchase__email"
+                placeholder="E-mail"
+              >
+              <button type="submit" class="purchase__button">
+                <img src="./images/icons/go-black.svg" alt="go">
+              </button>
+            </div>
+          </form>
         </section>
       </div>
     </main>
 
 
+    <footer class="footer">
+      <div class="footer__content">
+        <div class="footer__top">
+          <div class="footer__logo">
+            <a href="#" class="footer__logo logo">
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+
+          <div class="footer__top--socials">
+            <img src="./images/icons/facebook.svg" alt="facebook logo.jpg">
+
+            <img src="./images/icons/insta.svg" alt="instagram logo.jpg">
+          </div>
+        </div>
+
+        <div class="footer__info">
+          <div class="schedule footer__schedule">
+            <h4 class="footer__schedule--title">Графік роботи</h4>
+            <div class="footer__schedule--wrapper">
+              <ul class="schedule__work-days">
+                <li class="schedule__day">
+                  <span class="bold">12:00 - 20:00</span>
+                  <span class="schedule__day--day-of-week">cереда</span>
+                </li>
+                <li class="schedule__day">
+                  <span class="bold">12:00 - 20:00</span>
+                  <span class="schedule__day--day-of-week">четвер</span>
+                </li>
+                <li class="schedule__day">
+                  <span class="bold">12:00 - 20:00</span>
+                  <span class="schedule__day--day-of-week">п'ятниця</span>
+                </li>
+                <li class="schedule__day">
+                  <span class="bold">11:00 - 19:00</span>
+                  <span class="schedule__day--day-of-week">субота</span>
+                </li>
+                <li class="schedule__day">
+                  <span class="bold">11:00 - 19:00</span>
+                  <span class="schedule__day--day-of-week">неділя</span>
+                </li>
+              </ul>
+              <p class="footer__schedule--weekends">
+                <span class="bold">Вихідні:</span> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+          </div>
+          <div class="footer__contacts">
+            <h4 class="footer__contacts--title">Контакти</h4>
+            <a
+              href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494397,30.5307593,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+              class="footer__link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+38 (044) 278-13-57" class="footer__link">тел. +38 (044) 278-13-57</a>
+            <a href="#" class="footer__link">факс +38 (044) 278-74-54</a>
+            <a href="#" class="footer__link">e-mail: info@namu.kiev.ua</a>
+          </div>
+
+          <a href="#" class="footer__info--go-top">
+            <img src="./images/icons/arrow.svg" alt="arrow.svg">
+          </a>
+        </div>
+
+        <div class="footer__nav">
+          <ul class="footer__nav--list">
+            <li class="footer__nav--item">
+              <a href="#gallery" class="footer__nav--link">Галерея</a>
+            </li>
+            <li class="footer__nav--item">
+              <a href="#events" class="footer__nav--link">
+                Виставки та
+                <br>
+                події
+              </a>
+            </li>
+            <li class="footer__nav--item">
+              <a href="#about-us" class="footer__nav--link">Про Hас</a>
+            </li>
+            <li class="footer__nav--item">
+              <a href="#contacts" class="footer__nav--link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright">
+          <article class="footer__copyright--caption">
+            Designed by Zhyriada Marina
+          </article>
+          <article class="footer__copyright--caption">
+            Copyright © 2019. All Rights Reserved.
+          </article>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
